--- a/website/js/templates/application.hbs
+++ b/website/js/templates/application.hbs
@@ -4,10 +4,18 @@
       <a class="list-group-item" href="#/portfolio"><i class="fa fa-picture-o"></i> Portfolio</a>
       <a class="list-group-item" href="#/publications"><i class="fa fa-book"></i> Publications</a>
       <a class="list-group-item" href="#/talks"><i class="fa fa-comments-o"></i> Talks</a>
-      <a class="list-group-item" href="#/blog"><i class="fa fa-rss"></i> Blog</a>
-      <a class="list-group-item" href="#/github"><i class="fa fa-github"></i> Github</a>
-      <a class="list-group-item" href="#/stackoverflow"><i class="fa fa-stack-overflow"></i> Stack Overflow</a>
-      <a class="list-group-item" href="#/twitter"><i class="fa fa-twitter"></i> Twitter</a>
+      <a class="list-group-item" href="http://blog.wolksoftware.com/">
+        <i class="fa fa-rss"></i> Blog
+      </a>
+      <a class="list-group-item" href="https://github.com/remojansen">
+        <i class="fa fa-github"></i> Github
+      </a>
+      <a class="list-group-item" href="https://stackoverflow.com/users/606821/remo-h-jansen?tab=profile">
+        <i class="fa fa-stack-overflow"></i> Stack Overflow
+      </a>
+      <a class="list-group-item" href="https://twitter.com/RemoHJansen">
+        <i class="fa fa-twitter"></i> Twitter
+      </a>
     </ul>
 </nav>
 <main id="panel">
@@ -26,10 +34,26 @@
               <li>{{#link-to 'portfolio'}}<i class="fa fa-picture-o"></i> Portfolio{{/link-to}}</li>
               <li>{{#link-to 'publications'}}<i class="fa fa-book"></i> Publications{{/link-to}}</li>
               <li>{{#link-to 'talks'}}<i class="fa fa-comments-o"></i> Talks{{/link-to}}</li>
-              <li>{{#link-to 'blog'}}<i class="fa fa-rss"></i> Blog{{/link-to}}</li>
-              <li>{{#link-to 'github'}}<i class="fa fa-github"></i> Github{{/link-to}}</li>
-              <li>{{#link-to 'stackoverflow'}}<i class="fa fa-stack-overflow"></i> Stack Overflow{{/link-to}}</li>
-              <li>{{#link-to 'twitter'}}<i class="fa fa-twitter"></i> Twitter{{/link-to}}</li>
+              <li>
+                <a href='http://blog.wolksoftware.com/'>
+                  <i class="fa fa-rss"></i> Blog
+                </a>
+              </li>
+              <li>
+                <a href='https://github.com/remojansen'>
+                  <i class="fa fa-github"></i> Github
+                </a>
+              </li>
+              <li>
+                <a href='https://stackoverflow.com/users/606821/remo-h-jansen?tab=profile'>
+                  <i class="fa fa-stack-overflow"></i> Stack Overflow
+                </a>
+              </li>
+              <li>
+                <a href='https://twitter.com/RemoHJansen'>
+                  <i class="fa fa-twitter"></i> Twitter
+                </a>
+              </li>
             </ul>
           </div>
       </div>
@@ -50,11 +74,12 @@
             I'm a
             <a class="link" href="https://mvp.microsoft.com/en-us/PublicProfile/5002223">Microsoft MVP</a>
             <a class="link" href="#/portfolio">Full-Stack JavaScript and TypeScript Ninja</a>,
-            <a class="link" href="#/github">open-source contributor</a>,
+            <a class="link" href="https://github.com/remojansen">open-source contributor</a>,
             <a class="link" href="#/publications">writer</a>,
             <a class="link" href="#/talks">speaker</a>,
             <a class="link" href="http://www.wolksoftware.com">entrepreneur</a>,
-            <a class="link" href="#/blog">technology lover</a> and
+            <a class="link" href="http://blog.wolksoftware.com/">blogger</a>,
+            <a class="link" href="https://twitter.com/RemoHJansen">technology lover</a> and
             <a class="link" href="https://live.xbox.com/en-US/Profile?gamertag=OweR%20ReLoaDeD">gamer</a>.
           </p>
         </div>
